--- a/index.css
+++ b/index.css
@@ -13,15 +13,17 @@ body{
 }
 
 .page{
-  background-color: #00abeeb9;
+  background-color: #fdfdfdb9;
 }
 
 .page-header{
   background-color: #000000;
   height: 70px;
   display: flex;
-  flex-direction: row;
+  /* align-items: center; */
+  /* flex-direction: row; */
   padding-bottom: 30px;
+  margin-bottom: 30px;
 }
 .page-header .logo{
   font-size: 35px;
@@ -29,12 +31,36 @@ body{
   padding-top:40px ;
 }
 
+.page-header .search{
+  /* position: absolute ; */
+  height: 30px;
+  border-radius: 20px;
+  border-color: #000000;
+
+}
+.searchbar{
+  display: flex;
+  position: absolute;
+  right: 50px;
+  top: 35px;
+}
+.searchbar .icon{
+  color: #000000;
+  position: absolute;
+  top: 10px;
+  left: 12px;
+}
+input{
+  width: 300px;
+  height: 100px;
+}
+
 .brandName{
   font-family: Helvetica, sans-serif  ;
   color:  #ffffff;
   font-size: 40PX;
   padding: 10px;
-  padding-left: 10px;
+  padding-left: 15px;
 }
 
 .post{
