--- a/index.css
+++ b/index.css
@@ -13,46 +13,30 @@ body{
 }
 
 .page{
-  background-color: #fdfdfdb9;
+  background-color: #00abeeb9;
 }
 
 .page-header{
   background-color: #000000;
   height: 70px;
   display: flex;
-  /* align-items: center; */
-  /* flex-direction: row; */
+  flex-direction: row;
   padding-bottom: 30px;
-  margin-bottom: 30px;
 }
 .page-header .logo{
   font-size: 35px;
   color: #ffffff;
   padding-top:40px ;
 }
+.page-header .search-bar{
+  color: #ffff;
+  margin-left: 900px;
+  margin-top: 40px;
+  font-size: 20px;
+  border-width: 2px;
+  border-radius: 10px;
+  border-color: #ffffff;
 
-.page-header .search{
-  /* position: absolute ; */
-  height: 30px;
-  border-radius: 20px;
-  border-color: #000000;
-
-}
-.searchbar{
-  display: flex;
-  position: absolute;
-  right: 50px;
-  top: 35px;
-}
-.searchbar .icon{
-  color: #000000;
-  position: absolute;
-  top: 10px;
-  left: 12px;
-}
-input{
-  width: 300px;
-  height: 100px;
 }
 
 .brandName{
@@ -60,7 +44,7 @@ input{
   color:  #ffffff;
   font-size: 40PX;
   padding: 10px;
-  padding-left: 15px;
+  padding-left: 10px;
 }
 
 .post{
