--- a/trends.css
+++ b/trends.css
@@ -1,11 +1,38 @@
+/* .trend{
+    width: 100px;
+    height: 100px;
+    border: 1px solid black;
+} */
+
 .trend .head{
     display: flex;
     flex-direction: row;
     /* border: 1px solid; */
     position: absolute;
-    right: 205px;
+    right: 70px;
     top: 150px;
+    padding: 10px;
     font-size: 20px;
     color: rgb(0, 0, 0);
     font-family: Helvetica, sans-serif;
+    width: 270px;
+    background-color: whitesmoke;
+
+}
+
+.trend .hashtags{
+    /* display: flex; */
+    /* flex-direction: row; */
+    /* border: 1px solid; */
+    position: absolute;
+    height: 350px;
+    width: 260px;
+    padding: 15px;
+    right: 70px;
+    background-color: whitesmoke;
+    top: 195px;
+    font-size: 18px;
+    color: rgb(21, 136, 230);
+    font-family: Helvetica, sans-serif;
+    /* background-color: burlywood; */
 }
